# econpy

./: EconPy.md  LICENSE  ProjectHome.md  README  README.md  pyproject.toml  pythonresources.html  software4econ.html  software4econ.xhtml
abm/: utilities.py
abm/agents/: agents001.py
abm/gridworld/: gridworld.py
abm/historical/: bergmann1990.txt
abm/netlogo/: .netlogo4to6.py.swp  netlogo4to6.py
abm/segregate/: schelling02.py
abm/template_models/: Cell.Data  README.txt  template01.py  template02.py  template03.py  template05.py  template06.py  template07.py  template08.py  template09.py  template10.py  template11.py  template13.py  template14.py  template15.py
abs/: utilities.py
abs/agents/: agents001.py
abs/pestieau1984oep/: agents.py
dynopt/: kurtz.py
finance/: finance.py
integrate/: quadrature.py
optimize/: iterate.py
plot/: plot.py
pytrix/: fmath.py  io.py  iterate.py  ls.py  opendatabank.txt  principal_components.py  pyGAUSS.py  pytrix.htm  pytrix.py  pytrix.xhtml  pytrixIO.py  stat.py  tseries.py  unitroot.py  utilities.py
scripts/: kc.py  pestieau1984.py  scripts_config.py
tests/: simplest.py  test_abm.py  test_finance.py  test_functions.py  test_iterate.py  test_ls.py  test_pestieau.py  test_pytrix.py  test_quadrature.py  test_stat.py  test_table.py  test_text_utilities.py  test_tseries.py  test_utilities.py  tests_config.py
text/: pestieau1984background.tex
trunk/: pythonresources.html  software4econ.xhtml
utilities/: mso.py  sftp_client.py  table.py  test_table.py  text.py  wordfreq.py
vim/: _vimrc
wiki/: EconPy.wiki
(+145 files in other folders)
