[project]
name = "econpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alan G Isaac", email = "alan.isaac@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
